# gameplay_recorder

./: .coverage  .gitignore  LICENSE  NOTICE  README.md  conftest.py  pyproject.toml
.github/workflows/: build.yml  test.yml
installer/: gameplay_recorder_mac.spec  gameplay_recorder_win.spec
scripts/: setup_scrcpy.ps1
src/gameplay_recorder/: __main__.py  app.py  config.py
src/gameplay_recorder/adb/: connection.py  paths.py
src/gameplay_recorder/capture/: event_monitor.py  event_persister.py  scrcpy_recorder.py  screenshot_capture.py  video_recorder.py
src/gameplay_recorder/models/: __init__.py  session.py  touch_event.py
src/gameplay_recorder/packaging/: concat.py  metadata.py  validation.py  worker.py  zipper.py
src/gameplay_recorder/ui/: __init__.py  done_screen.py  idle_screen.py  main_window.py  packaging_screen.py  recording_screen.py
src/gameplay_recorder/update/: checker.py
tests/: README.md
tests/audit/: test_import_graph.py  test_public_repo_blacklist.py
tests/integration/: test_adb_connection.py
tests/unit/: test_app.py  test_app_adb_wiring.py
tests/unit/adb/: test_connection.py  test_paths.py
tests/unit/capture/: test_event_monitor.py  test_event_persister.py  test_mp4_validation.py  test_scrcpy_recorder.py  test_screenshot_capture.py  test_video_recorder.py
tests/unit/models/: test_session.py  test_touch_event.py
tests/unit/packaging/: test_concat.py  test_metadata.py  test_touch_capture_meta.py  test_validation.py  test_worker.py  test_zipper.py
tests/unit/ui/: test_idle_screen_escape_hatch.py  test_state_machine.py  (+4 more)
(+1 files in other folders)
